@startuml

title __GRAPHIC's Class Diagram__\n


    namespace om.example.graphic {
      class com.example.graphic.HelloApplication {
          {static} + main()
          + start()
      }
    }
  }


    namespace om.example.graphic {
      class com.example.graphic.HelloController {
          + Dedlain : Label
          + datee1 : TextField
          + datee2 : TextField
          + fieldData : TextField
          + fieldName : TextField
          + fieldStatus : TextField
          + fieldVid : TextField
          + tbl : TableView
          ~ col0 : TableColumn
          ~ col1 : TableColumn
          ~ col2 : TableColumn
          ~ col3 : TableColumn
          ~ col4 : TableColumn
          ~ connection : Connection
          ~ query : String
          ~ resultSet : ResultSet
          ~ statement : Statement
          - fxlist : ObservableList<StrDB>
          + initialize()
          + onDel()
          + onSef()
          # onSohr()
          # onmain()
          - createtable()
          - updateSorts()
          - updateTable()
      }
    }
  }


  namespace  {
    namespace om.example.graphic {
      interface com.example.graphic.InterDB {
          {abstract} + addStrDB()
          {abstract} + deleteStrDB()
          {abstract} + getAllStrDB()
          {abstract} + getStrDBById()
          {abstract} + updateStrDB()
      }
    }
  }


  namespace  {
    namespace om.example.graphic {
      class com.example.graphic.InterDBImpl {
          - conn : Connection
          + InterDBImpl()
          + addStrDB()
          + deleteStrDB()
          + getAllStrDB()
          + getStrDBById()
          + updateStrDB()
      }
    }
  }


  namespace  {
    namespace om.example.graphic {
      class com.example.graphic.StrDB {
          - data : SimpleStringProperty
          - id : SimpleIntegerProperty
          - name : SimpleStringProperty
          - status : SimpleStringProperty
          - vid : SimpleStringProperty
          + StrDB()
          + getData()
          + getId()
          + getName()
          + getStatus()
          + getVid()
          + setData()
          + setName()
          + setStatus()
          + setVid()
      }
    }
  }
  

  com.example.graphic.HelloApplication -up-|> javafx.application.Application
  com.example.graphic.HelloController .up.|> javafx.fxml.Initializable
  com.example.graphic.HelloController o-- com.example.graphic.InterDB : interDB
  com.example.graphic.HelloController o-- com.example.graphic.StrDB : strDBAdd
  com.example.graphic.InterDBImpl .up.|> com.example.graphic.InterDB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
